--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       <div class="row g-4">
         <div class="col-md-4">
           <div class="card h-100">
-            <img src="images/cars/Audi-R8.jpg" class="card-img-top" alt="Audi R8">
+            <img src="images/Audi R8.png" class="card-img-top" alt="Audi R8">
             <div class="card-body">
               <h5 class="card-title">Audi R8</h5>
               <p class="card-text">El superdeportivo definitivo de Audi, combinando rendimiento y tecnología alemana.</p>
@@ -107,7 +107,7 @@
         </div>
         <div class="col-md-4">
           <div class="card h-100">
-            <img src="images/cars/Porsche-911.jpg" class="card-img-top" alt="Porsche 911">
+            <img src="images/Porshe1.png" class="card-img-top" alt="Porsche 911">
             <div class="card-body">
               <h5 class="card-title">Porsche 911</h5>
               <p class="card-text">Un ícono del rendimiento deportivo, con décadas de evolución y excelencia.</p>
@@ -116,7 +116,7 @@
         </div>
         <div class="col-md-4">
           <div class="card h-100">
-            <img src="images/cars/BMW-M8.jpg" class="card-img-top" alt="BMW M8">
+            <img src="images/BMW-M8.png" class="card-img-top" alt="BMW M8">
             <div class="card-body">
               <h5 class="card-title">BMW M8</h5>
               <p class="card-text">La máxima expresión del lujo deportivo de BMW.</p>
