--- a/pages/contact.html
+++ b/pages/contact.html
@@ -64,96 +64,73 @@
     </header>
 
     <!-- Contact Section -->
-    <section class="contact-section py-5">
+    <section class="contact-section py-5 mt-5">
         <div class="container">
             <div class="row">
-                <!-- Contact Information -->
-                <div class="col-md-4 mb-4 mb-md-0">
-                    <div class="contact-info p-4 bg-light rounded shadow-sm">
-                        <h3 class="h4 mb-4">Información de Contacto</h3>
-                        <div class="d-flex mb-3">
-                            <i class="fas fa-envelope fa-fw text-primary me-2"></i>
-                            <a href="mailto:dimofrancisco@gmail.com" class="text-dark text-decoration-none">dimofrancisco@gmail.com</a>
+                <div class="col-lg-6 mb-4">
+                    <h2 class="mb-4">Contactanos</h2>
+                    <p class="mb-4">¿Interesado en alguno de nuestros vehículos de lujo? Completa el formulario y nos pondremos en contacto contigo a la brevedad.</p>
+                    
+                    <form id="contactForm">
+                        <div class="mb-3">
+                            <label for="name" class="form-label">Nombre completo</label>
+                            <input type="text" class="form-control" id="name" required>
                         </div>
-                        <div class="d-flex mb-3">
-                            <i class="fas fa-phone fa-fw text-primary me-2"></i>
-                            <a href="tel:+5493382567342" class="text-dark text-decoration-none">+54 9 3382 567342</a>
+                        <div class="mb-3">
+                            <label for="email" class="form-label">Email</label>
+                            <input type="email" class="form-control" id="email" required>
                         </div>
-                        <div class="d-flex mb-3">
-                            <i class="fas fa-map-marker-alt fa-fw text-primary me-2"></i>
-                            <span>Buenos Aires, Argentina</span>
+                        <div class="mb-3">
+                            <label for="phone" class="form-label">Teléfono</label>
+                            <input type="tel" class="form-control" id="phone">
                         </div>
-                        <hr class="my-4">
-                        <h4 class="h5 mb-3">Síguenos en Redes</h4>
-                        <div class="social-links">
-                            <a href="https://facebook.com" target="_blank" class="btn btn-outline-primary me-2" aria-label="Facebook">
-                                <i class="fab fa-facebook"></i>
-                            </a>
-                            <a href="https://instagram.com" target="_blank" class="btn btn-outline-primary me-2" aria-label="Instagram">
-                                <i class="fab fa-instagram"></i>
-                            </a>
-                            <a href="https://twitter.com" target="_blank" class="btn btn-outline-primary me-2" aria-label="Twitter">
-                                <i class="fab fa-twitter"></i>
-                            </a>
-                            <a href="https://wa.me/5493382567342" target="_blank" class="btn btn-outline-primary me-2" aria-label="WhatsApp">
-                                <i class="fab fa-whatsapp"></i>
-                            </a>
+                        <div class="mb-3">
+                            <label for="interest" class="form-label">Vehículo de interés</label>
+                            <select class="form-select" id="interest">
+                                <option selected>Selecciona un modelo</option>
+                                <option>Mercedes-Benz EQS</option>
+                                <option>Tesla Model X</option>
+                                <option>Lexus LC</option>
+                                <option>BMW i8</option>
+                                <option>Jaguar I-PACE</option>
+                                <option>Tesla Model S</option>
+                            </select>
                         </div>
-                    </div>
+                        <div class="mb-3">
+                            <label for="message" class="form-label">Mensaje</label>
+                            <textarea class="form-control" id="message" rows="4" required></textarea>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Enviar mensaje</button>
+                    </form>
                 </div>
-
-                <!-- Contact Form -->
-                <div class="col-md-8">
-                    <div class="contact-form p-4 bg-white rounded shadow-sm">
-                        <h3 class="h4 mb-4">Envíanos un Mensaje</h3>
-                        <form id="contactForm" class="needs-validation" novalidate>
-                            <div class="row">
-                                <div class="col-md-6 mb-3">
-                                    <label for="nombre" class="form-label">Nombre</label>
-                                    <input type="text" class="form-control" id="nombre" required>
-                                    <div class="invalid-feedback">
-                                        Por favor ingresa tu nombre
-                                    </div>
-                                </div>
-                                <div class="col-md-6 mb-3">
-                                    <label for="apellido" class="form-label">Apellido</label>
-                                    <input type="text" class="form-control" id="apellido" required>
-                                    <div class="invalid-feedback">
-                                        Por favor ingresa tu apellido
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="mb-3">
-                                <label for="email" class="form-label">Correo Electrónico</label>
-                                <input type="email" class="form-control" id="email" required>
-                                <div class="invalid-feedback">
-                                    Por favor ingresa un correo electrónico válido
-                                </div>
-                            </div>
-                            <div class="mb-3">
-                                <label for="asunto" class="form-label">Asunto</label>
-                                <select class="form-select" id="asunto" required>
-                                    <option value="">Selecciona un asunto</option>
-                                    <option value="consulta">Consulta General</option>
-                                    <option value="compra">Información de Compra</option>
-                                    <option value="venta">Información de Venta</option>
-                                    <option value="otro">Otro</option>
-                                </select>
-                                <div class="invalid-feedback">
-                                    Por favor selecciona un asunto
-                                </div>
-                            </div>
-                            <div class="mb-3">
-                                <label for="mensaje" class="form-label">Mensaje</label>
-                                <textarea class="form-control" id="mensaje" rows="5" required></textarea>
-                                <div class="invalid-feedback">
-                                    Por favor ingresa tu mensaje
-                                </div>
-                            </div>
-                            <button type="submit" class="btn btn-primary">
-                                <i class="fas fa-paper-plane me-2"></i>Enviar Mensaje
-                            </button>
-                        </form>
+                
+                <div class="col-lg-6">
+                    <div class="contact-info p-4 bg-light rounded">
+                        <h3 class="mb-4">Información de contacto</h3>
+                        <div class="mb-4">
+                            <h5><i class="fas fa-map-marker-alt me-2"></i>Ubicación</h5>
+                            <p>Av. Luxury Cars 123<br>Buenos Aires, Argentina</p>
+                        </div>
+                        <div class="mb-4">
+                            <h5><i class="fas fa-phone me-2"></i>Teléfono</h5>
+                            <p>+54 11 1234-5678</p>
+                        </div>
+                        <div class="mb-4">
+                            <h5><i class="fas fa-envelope me-2"></i>Email</h5>
+                            <p>info@changai.com</p>
+                        </div>
+                        <div class="mb-4">
+                            <h5><i class="fas fa-clock me-2"></i>Horario</h5>
+                            <p>Lunes a Viernes: 9:00 - 20:00<br>
+                               Sábados: 10:00 - 17:00</p>
+                        </div>
+                        <div class="social-links">
+                            <h5 class="mb-3">Síguenos</h5>
+                            <a href="#" class="me-3"><i class="fab fa-facebook fa-2x"></i></a>
+                            <a href="#" class="me-3"><i class="fab fa-instagram fa-2x"></i></a>
+                            <a href="#" class="me-3"><i class="fab fa-twitter fa-2x"></i></a>
+                            <a href="#"><i class="fab fa-linkedin fa-2x"></i></a>
+                        </div>
                     </div>
                 </div>
             </div>
